fix css broken on firefox

--- a/pug/css/todo-item.styl
+++ b/pug/css/todo-item.styl
@@ -15,13 +15,14 @@
   .item-label
     display block
     height 100%
-    padding 0 0.3em
+    width 2em
 
     background-color #20CAFF
     color #eee
     font-weight bold
     writing-mode vertical-rl
     text-align center
+    line-height 2em
 
 .user-images
   display flex
